@@ -1,130 +1,126 @@
 package io.openems.edge.phoenixcontact.plcnext.meter;
 
-import java.util.List;
-
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
-
 import io.openems.edge.meter.api.ElectricityMeter;
-import io.openems.edge.phoenixcontact.plcnext.common.mapper.PlcNextGdsDataMappedValue;
 import io.openems.edge.phoenixcontact.plcnext.common.mapper.PlcNextGdsDataToChannelMapper;
 import io.openems.edge.phoenixcontact.plcnext.common.mapper.PlcNextGdsDataToChannelMapperImpl;
+import org.junit.Before;
+import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 
 public class PlcNextGdsMeterDataToChannelMapperTest {
 
 	private PlcNextGdsDataToChannelMapper dataMapper;
 	private String instanceName;
 
-	@BeforeEach
+	@Before
 	public void setupBefore() {
-		dataMapper = new PlcNextGdsDataToChannelMapperImpl();
-		instanceName = "MeasurementDevice.";
+		this.dataMapper = new PlcNextGdsDataToChannelMapperImpl();
+		this.instanceName = "MeasurementDevice.";
 	}
 
 	@Test
 	public void testSinglePrimitiveVariableMapping_Successfully() {
 		// prep
-		Integer expectedValue = 12345;
+		var expectedValue = 12345;
 
-		JsonObject primitiveVariable = new JsonObject();
+		var primitiveVariable = new JsonObject();
 		primitiveVariable.addProperty("path", "MeasurementDevice.ActivePowerL123");
 		primitiveVariable.addProperty("value", expectedValue);
 
 		// test
-		PlcNextGdsDataMappedValue mappedValue = dataMapper.mapSingleValueToChannel(primitiveVariable, instanceName,
+		var mappedValue = this.dataMapper.mapSingleValueToChannel(primitiveVariable, this.instanceName,
 				"jUnit", PlcNextMeterGdsDataReadMappingDefinition.values());
 
 		// check
-		Assertions.assertNotNull(mappedValue);
-
-		Assertions.assertEquals(ElectricityMeter.ChannelId.ACTIVE_POWER, mappedValue.getChannelId());
-		Assertions.assertEquals(expectedValue, mappedValue.getValue());
+		assertNotNull(mappedValue);
+		assertEquals(ElectricityMeter.ChannelId.ACTIVE_POWER, mappedValue.getChannelId());
+		assertEquals(expectedValue, mappedValue.getValue());
 	}
 
 	@Test
 	public void testAllPrimitiveVariableMapping_Successfully() {
 		// prep
-		Integer expectedValue = 12345;
-
-		JsonObject apiResponse = new JsonObject();
+		var apiResponse = new JsonObject();
 		apiResponse.addProperty("apVersion", "1.13.0.0");
 		apiResponse.addProperty("projectCRC", 1410814331);
 		apiResponse.addProperty("userAuthenticationRequired", true);
 
-		JsonArray variables = new JsonArray();
-		JsonObject primitiveVariable = new JsonObject();
-		primitiveVariable.addProperty("path", instanceName + "activePowerL123");
+        var expectedValue = 12345;
+		var primitiveVariable = new JsonObject();
+		primitiveVariable.addProperty("path", this.instanceName + "activePowerL123");
 		primitiveVariable.addProperty("value", expectedValue);
-		variables.add(primitiveVariable);
+
+        var variables = new JsonArray();
+        variables.add(primitiveVariable);
 		apiResponse.add("variables", variables);
 
 		// test
-		List<PlcNextGdsDataMappedValue> mappedValues = dataMapper.mapAllValuesToChannels(variables, instanceName,
-				"junit", PlcNextMeterGdsDataReadMappingDefinition.values());
+		var mappedValues = this.dataMapper.mapAllValuesToChannels(variables,
+				this.instanceName,"junit", PlcNextMeterGdsDataReadMappingDefinition.values());
 
 		// check
-		Assertions.assertNotNull(mappedValues);
-		Assertions.assertEquals(1, mappedValues.size());
+		assertNotNull(mappedValues);
+		assertEquals(1, mappedValues.size());
 
-		PlcNextGdsDataMappedValue mappedValue = mappedValues.get(0);
-		Assertions.assertEquals(ElectricityMeter.ChannelId.ACTIVE_POWER, mappedValue.getChannelId());
-		Assertions.assertEquals(expectedValue, mappedValue.getValue());
+		var mappedValue = mappedValues.getFirst();
+		assertEquals(ElectricityMeter.ChannelId.ACTIVE_POWER, mappedValue.getChannelId());
+		assertEquals(expectedValue, mappedValue.getValue());
 	}
 
 	@Test
 	public void testAllPlcNextVariablesAreMapped_Successfully() {
-		// prep
-		Integer expectedValueVoltagesL1N = 11000;
-		Integer expectedValueNeutralCurrent = 55000;
-		Long expectedValueEnergyImport = 44000L;
+        // prep
+        var variables = new JsonArray();
 
-		JsonArray variables = new JsonArray();
-
-		JsonObject varPhaseVoltages = new JsonObject();
-		varPhaseVoltages.addProperty("path", instanceName + "VoltageL1N");
+		var expectedValueVoltagesL1N = 11000;
+		var varPhaseVoltages = new JsonObject();
+		varPhaseVoltages.addProperty("path", this.instanceName + "VoltageL1N");
 		varPhaseVoltages.addProperty("value", expectedValueVoltagesL1N);
 		variables.add(varPhaseVoltages);
 
-		JsonObject varNeutralCurrent = new JsonObject();
-		varNeutralCurrent.addProperty("path", instanceName + "CurrentNeutral");
+        var expectedValueNeutralCurrent = 55000;
+		var varNeutralCurrent = new JsonObject();
+		varNeutralCurrent.addProperty("path", this.instanceName + "CurrentNeutral");
 		varNeutralCurrent.addProperty("value", expectedValueNeutralCurrent);
 		variables.add(varNeutralCurrent);
 
-		JsonObject varEnergyImport = new JsonObject();
-		varEnergyImport.addProperty("path", instanceName + "EnergyImport");
+        var expectedValueEnergyImport = 44000L;
+		var varEnergyImport = new JsonObject();
+		varEnergyImport.addProperty("path", this.instanceName + "EnergyImport");
 		varEnergyImport.addProperty("value", expectedValueEnergyImport);
 		variables.add(varEnergyImport);
 
-		int mappedVariableCount = 3;
+		var mappedVariableCount = 3;
 
 		// test
-		List<PlcNextGdsDataMappedValue> mappedValues = dataMapper.mapAllValuesToChannels(variables, instanceName,
+		var mappedValues = this.dataMapper.mapAllValuesToChannels(variables,
+				this.instanceName,
 				"jUnit", PlcNextMeterGdsDataReadMappingDefinition.values());
 
 		// check
-		Assertions.assertNotNull(mappedValues);
-		Assertions.assertEquals(mappedVariableCount, mappedValues.size());
+		assertNotNull(mappedValues);
+		assertEquals(mappedVariableCount, mappedValues.size());
 
-		PlcNextGdsDataMappedValue phaseVolatageL1 = mappedValues.stream()//
+		var phaseVoltageL1 = mappedValues.stream()//
 				.filter(item -> ElectricityMeter.ChannelId.VOLTAGE_L1 == item.getChannelId())//
 				.findFirst().orElse(null);
-		Assertions.assertNotNull(phaseVolatageL1);
-		Assertions.assertEquals((Object) expectedValueVoltagesL1N, phaseVolatageL1.getValue());
+		assertNotNull(phaseVoltageL1);
+		assertEquals(expectedValueVoltagesL1N, phaseVoltageL1.getValue());
 
-		PlcNextGdsDataMappedValue neutralCurrent = mappedValues.stream()//
+		var neutralCurrent = mappedValues.stream()//
 				.filter(item -> PlcNextMeter.ChannelId.CURRENT_NEUTRAL == item.getChannelId())//
 				.findFirst().orElse(null);
-		Assertions.assertNotNull(neutralCurrent);
-		Assertions.assertEquals((Object) expectedValueNeutralCurrent, neutralCurrent.getValue());
+		assertNotNull(neutralCurrent);
+		assertEquals(expectedValueNeutralCurrent, neutralCurrent.getValue());
 
-		PlcNextGdsDataMappedValue energyImport = mappedValues.stream()//
+		var energyImport = mappedValues.stream()//
 				.filter(item -> ElectricityMeter.ChannelId.ACTIVE_CONSUMPTION_ENERGY == item.getChannelId())//
 				.findFirst().orElse(null);
-		Assertions.assertNotNull(energyImport);
-		Assertions.assertEquals((Object) expectedValueEnergyImport, energyImport.getValue());
+		assertNotNull(energyImport);
+		assertEquals(expectedValueEnergyImport, energyImport.getValue());
 	}
 }
